# meta-vex

./: .gitignore  CLAUDE.md  CURSOR_GAPS.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: judge.md
.claude/hooks/: spec-injector.sh  stop-integrity-check.py
.cursor/: hooks.json
.cursor/hooks/: pre-bash-anticheat.sh  pre-edit-anticheat.sh  session-start.sh
.github/workflows/: ci.yml
.harness/: REWARD_HACK_PROTOCOL.md  disclosure.md  files-allowed  plan.md  spec.md
.orchestra/: README.md
.orchestra/mailbox/: agentdex.md  all.md  ionq.md  meta-vex.md
.orchestra/mailbox/.directives/: linear.md
agentdex/: __init__.py  cli.py  coach.py  main.py
agentdex/shared/: helios_adapter.py  protocols.py
agentdex/swarm/: __init__.py  cli.py  hub.py  leaf.py  registry.py  result.py
docs/: architecture.md
docs/adr/: 0001-stack-python-fastapi.md  0002-ionq-hooks-adoption.md  0003-swimlane-membership.md  0004-coach-hub-cache.md  0005-pivot-to-agent-battle-platform.md  README.md
docs/bench/: 2026-05-29-coach-1.0.10-3leaf.json  2026-05-29-coach-1.0.10-3leaf.md
features/: README.md
features/PHASE-1/: F01-foundation.md  F02-coach-integration.md  F03-swarm-runtime.md  F04-observability.md
hooks/_agentdex_hooks/: __init__.py  disclosure.py  git_state.py  heldout.py  judge.py  paths.py  test_runner.py
hooks/_ionq_hooks/: __init__.py  detectors.py  git_state.py  judge.py  metrics.py  orchestrator.py  paths.py  shadow.py
meta_vex/: __init__.py  coach.py  main.py
meta_vex/playground/: __init__.py
meta_vex/swarm/: __init__.py  hub.py  leaf.py
reporters/pytest/: ionq_hooks_pytest.py  pyproject.toml
scripts/: bench_coach_swarm.py  heartbeat_snap.sh  loop_driver.sh
tests/: test_smoke.py  test_swarm.py
tests/modules/: test_battle_engine.py  test_helios_adapter.py  test_pareto.py
(+10 files in other folders)
