[project]
name = "agentdex"
version = "0.1.0"
description = "VEX playground for the ionq · helios · oppie trio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eddie Tang", email = "eddie@oppie.xyz" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "anyio>=4.6",
    "python-dotenv>=1.0",
]

[project.scripts]
agentdex = "agentdex.swarm.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx[cli]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentdex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "hooks/_ionq_hooks",  # upstream-owned (ionq-hooks cookiecutter)
    "reporters",          # upstream-owned (ionq-hooks cookiecutter)
    ".claude",
    ".cursor",
    ".harness",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = [
    "hooks/_ionq_hooks",
    "reporters",
]
